maven modules connections

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,15 @@
     <artifactId>untitled</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>config-server</module>
+        <module>api-gateway</module>
+        <module>db-patterns</module>
+        <module>db-textile</module>
+        <module>eureka-server</module>
+        <module>payment-app</module>
+        <module>web-client</module>
+    </modules>
 
 
     <properties>
@@ -15,5 +24,26 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>3.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <version>3.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
