--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8085
+  port: 8888
 
 spring:
   application:
-    name: configserver
+    name: config-server
 
   cloud:
     config:
