--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>4.1.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
