--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
   application:
     name: config-server
 
+  profiles:
+    active:
+      - native
+
   cloud:
     config:
       server:
