--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: eserver
   config:
-    import: configserver:http://localhost:8888
+    import: optional:configserver:http://localhost:8888
   profiles:
     active: default
 eureka:
