--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 server:
-  port: 8768
+  port: 8765
 
 spring:
   application:
     name: api-gateway
+
   profiles:
     active: eclient
+
   cloud:
     gateway:
       discovery:
@@ -13,4 +15,4 @@ spring:
           enabled: true
           lower-case-service-id: true
   config:
-    import: configserver:http://localhost:8888
+    import: optional:configserver:http://localhost:8888
