--- a/payment-app/src/main/resources/application.yml
+++ b/payment-app/src/main/resources/application.yml
@@ -13,5 +13,15 @@ spring:
   profiles:
     active: eclient
 
-  config:
-    import: configserver:http://localhost:8085
+  discovery:
+    client:
+      serviceUrl:
+        defaultZone: http://localhost:8761/eureka
+      register-with-eureka: true
+      fetch-registry: true
+
+  cloud:
+    config:
+      import: optional:configserver:http://localhost:8888
+      enabled: false
+
