--- a/web-client/src/main/resources/application.yml
+++ b/web-client/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8080
+  port: 8082
 
 spring:
   application:
     name: webclient
 
   config:
-    import: configserver:http://localhost:8085
+    import: optional:configserver:http://localhost:8888
