--- a/payment-app/src/main/resources/application.yml
+++ b/payment-app/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 0
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
 spring:
   application:
     name: payment
@@ -11,17 +16,11 @@ spring:
       ddl-auto: none
 
   profiles:
-    active: eclient
-
-  discovery:
-    client:
-      serviceUrl:
-        defaultZone: http://localhost:8761/eureka
-      register-with-eureka: true
-      fetch-registry: true
+    active: eserver
 
   cloud:
     config:
       import: optional:configserver:http://localhost:8888
       enabled: false
+
 
