--- a/web-client/src/main/resources/application.yml
+++ b/web-client/src/main/resources/application.yml
@@ -7,3 +7,10 @@ spring:
 
   config:
     import: optional:configserver:http://localhost:8888
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: root
+    password: admin
+
